src/styles/global.scss
/* Global styles
========================================================================== */

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*,
*:before,
*:after {
  box-sizing: inherit;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
}

img {
  display: block;
  max-width: 100%;
}

ul,
ol {
  margin: 0;
  padding: 0;
  list-style: none;
}

.visuallyHidden:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(00 0 0);
  overflow: hidden;
}

.gridWrapper {
  display: grid;
  grid-template-columns: 4% repeat(12, 1fr) 4%;
  grid-gap: 2.4rem;
  max-width: 1200px;
  margin: 0 auto;
}

.pageSection {
  min-height: 100vh;
}

main {
  background-color: $background !important;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%2329766f' fill-opacity='0.2' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
}

@media (max-width: 505px) {
  .gridWrapper {
    grid-template-columns: 4% repeat(6, 1fr), 4%;
    grid-gap: 2rem;
  }
}

